--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -19,8 +19,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "envalid": "^7.0.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^7.0.0",
     "nestjs-envalid": "1.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
