feat(bc): add message decorator

--- a/apps/blockchain/tsconfig.json
+++ b/apps/blockchain/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "paths": {
       "@config/*": ["src/config/*"],
+      "@common/*": ["src/common/*"],
       "@modules/*": ["src/modules/*"]
     },
     "module": "commonjs",
