feat(bc): add http exception filter

--- a/apps/blockchain/tsconfig.json
+++ b/apps/blockchain/tsconfig.json
@@ -3,6 +3,7 @@
     "paths": {
       "@config/*": ["src/config/*"],
       "@common/*": ["src/common/*"],
+      "@core/*": ["src/core/*"],
       "@modules/*": ["src/modules/*"]
     },
     "module": "commonjs",
