--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -20,6 +20,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "envalid": "^7.0.0",
