--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -20,10 +20,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "bip39": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "dotenv": "^16.3.1",
+    "elliptic": "^6.5.4",
     "envalid": "^7.0.0",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.0.0",
@@ -36,6 +38,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/elliptic": "^6.4.16",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
