feat(bc): add mine block method

--- a/apps/blockchain/.env.example
+++ b/apps/blockchain/.env.example
@@ -4,3 +4,4 @@ DATABASE_URI=mongodb://localhost:27017/epimon
 OWNER_WALLET_SECRET_PHRASE=
 OWNER_WALLET_INITIAL_BALANCE=10000
 MINING_REWARD=100
+DIFFICULTY=4
