--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -31,6 +31,8 @@
     "helmet": "^7.0.0",
     "mongoose": "^8.0.0",
     "nestjs-envalid": "1.3.0",
+    "nestjs-pino": "^3.5.0",
+    "pino-pretty": "^10.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
