--- a/apps/blockchain/.env.example
+++ b/apps/blockchain/.env.example
@@ -2,6 +2,7 @@ NODE_ENV=development
 PORT=3001
 GLOBAL_PREFIX=api
 DATABASE_URI=mongodb://localhost:27017/epimon
+ROOT_NODE_URI=http://localhost:3001/api
 OWNER_WALLET_SECRET_PHRASE=
 OWNER_WALLET_INITIAL_BALANCE=10000
 MINING_REWARD=100
