--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.6.0",
     "bip39": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
