--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -20,6 +20,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.8",
+    "@nestjs/websockets": "^10.2.8",
     "axios": "^1.6.0",
     "bip39": "^3.1.0",
     "class-transformer": "^0.5.1",
