--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain",
+  "name": "node",
   "version": "1.0.0",
   "scripts": {
     "build": "nest build",
@@ -17,25 +17,7 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.2.8",
-    "@nestjs/websockets": "^10.2.8",
-    "axios": "^1.6.0",
-    "bip39": "^3.1.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
-    "elliptic": "^6.5.4",
-    "envalid": "^7.0.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "helmet": "^7.0.0",
-    "mongoose": "^8.0.0",
-    "nestjs-envalid": "1.3.0",
-    "nestjs-pino": "^3.5.0",
-    "pino-http": "^8.5.1",
-    "pino-pretty": "^10.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -43,7 +25,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/elliptic": "^6.4.16",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
