--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain",
+  "name": "@epimon/blockchain",
   "version": "1.0.0",
   "scripts": {
     "build": "nest build",
@@ -15,6 +15,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@epimon/eslint-config": "workspace:^",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
