--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -15,7 +15,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@epimon/eslint-config": "workspace:^",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
@@ -41,6 +40,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@epimon/eslint-config": "workspace:^",
+    "@epimon/prettier-config": "workspace:^",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
