feat: add tsconfig package

--- a/apps/blockchain/tsconfig.json
+++ b/apps/blockchain/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@epimon/tsconfig/nest.json",
   "compilerOptions": {
     "paths": {
       "@config/*": ["src/config/*"],
@@ -7,24 +8,8 @@
       "@modules/*": ["src/modules/*"],
       "@features/*": ["src/features/*"]
     },
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "target": "ES2021",
-    "esModuleInterop": true,
-    "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "baseUrl": "./"
+  },
+  "include": ["src"]
 }
