--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@epimon/eslint-config": "workspace:^",
     "@epimon/prettier-config": "workspace:^",
+    "@epimon/tsconfig": "workspace:^",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
