--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -37,7 +37,8 @@
     "pino-http": "^8.5.1",
     "pino-pretty": "^10.2.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@epimon/eslint-config": "workspace:^",
