style(es): format components with eslint

--- a/apps/episcan/package.json
+++ b/apps/episcan/package.json
@@ -5,7 +5,7 @@
     "start:dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
