--- a/apps/node/.env.example
+++ b/apps/node/.env.example
@@ -1,3 +1,6 @@
 MINING_WALLET_SECRET_PHRASE=
+
 ROOT_NODE_URI=http://localhost:3001/api
 ROOT_SOCKET_URI=ws://localhost:8080
+
+LOCAL_API_URI=http://localhost:3001/api
