--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "envalid": "^7.0.0",
     "nestjs-envalid": "1.3.0",
+    "nestjs-io-client": "^0.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
