feat(node): add socket module

--- a/apps/node/tsconfig.json
+++ b/apps/node/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "paths": {
       "@config/*": ["src/config/*"],
-      "@modules/*": ["src/modules/*"]
+      "@modules/*": ["src/modules/*"],
+      "@features/*": ["src/features/*"]
     },
     "outDir": "./dist",
     "baseUrl": "./"
