--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -18,6 +18,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "envalid": "^7.0.0",
     "nestjs-envalid": "1.3.0",
