--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "@epimon/tsconfig/nest.json",
+  "include": ["src"],
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "./"
-  },
-  "include": ["src"]
+    "baseUrl": "./",
+    "composite": true
+  }
 }
