--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -20,7 +20,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.0",
+    "bip39": "^3.1.0",
     "dotenv": "^16.3.1",
+    "elliptic": "^6.5.4",
     "envalid": "^7.0.0",
     "nestjs-envalid": "1.3.0",
     "nestjs-io-client": "^0.1.0",
@@ -34,6 +36,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/elliptic": "^6.4.16",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
