--- a/apps/episcan/components.json
+++ b/apps/episcan/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/styles/globals.css",
+    "css": "@/styles/globals.css",
     "baseColor": "zinc",
     "cssVariables": true
   },
