style(esw): rename episcan project as episcan web

--- a/apps/episcan-web/package.json
+++ b/apps/episcan-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@epimon/episcan",
+  "name": "@epimon/episcan-web",
   "version": "1.0.0",
   "scripts": {
     "start:dev": "next dev",
