--- a/apps/episcan-api/package.json
+++ b/apps/episcan-api/package.json
@@ -19,6 +19,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.3.1",
+    "envalid": "^7.0.0",
+    "nestjs-envalid": "1.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
