--- a/apps/blockchain/package.json
+++ b/apps/blockchain/package.json
@@ -16,23 +16,24 @@
   },
   "dependencies": {
     "@epimon/common": "workspace:^",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/mongoose": "^10.0.1",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.2.8",
-    "@nestjs/websockets": "^10.2.8",
-    "axios": "^1.6.0",
+    "@nestjs/common": "^10.2.10",
+    "@nestjs/core": "^10.2.10",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.10",
+    "@nestjs/platform-socket.io": "^10.2.10",
+    "@nestjs/swagger": "^7.1.16",
+    "@nestjs/websockets": "^10.2.10",
+    "axios": "^1.6.2",
     "bip39": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "elliptic": "^6.5.4",
-    "envalid": "^7.0.0",
+    "envalid": "^8.0.0",
     "express-mongo-sanitize": "^2.2.0",
-    "helmet": "^7.0.0",
-    "mongoose": "^8.0.0",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.0.1",
     "nestjs-envalid": "1.3.0",
     "nestjs-pino": "^3.5.0",
     "pino-http": "^8.5.1",
@@ -45,28 +46,28 @@
     "@epimon/eslint-config": "workspace:^",
     "@epimon/prettier-config": "workspace:^",
     "@epimon/tsconfig": "workspace:^",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/elliptic": "^6.4.16",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.10",
+    "@types/elliptic": "^6.4.18",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.0",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.2"
   },
   "jest": {
     "moduleFileExtensions": [
