--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -23,5 +23,14 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^10.2.10",
+    "@nestjs/core": "^10.2.10",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "express": "^4.18.2",
+    "nestjs-pino": "^3.5.0",
+    "rxjs": "^7.8.1"
   }
 }
