--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^10.2.10",
     "@nestjs/core": "^10.2.10",
     "@nestjs/swagger": "^7.1.16",
+    "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
