--- a/apps/episcan-api/package.json
+++ b/apps/episcan-api/package.json
@@ -22,6 +22,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "axios": "^1.6.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "envalid": "^7.0.0",
