--- a/apps/episcan-web/package.json
+++ b/apps/episcan-web/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.292.0",
     "moment": "^2.29.4",
     "next": "14.0.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
