--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "2.0.0-beta.21",
     "@types/chrome": "^0.0.254",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
