feat(wt): connect create password page to api

--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -21,12 +21,14 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.20.1",
+    "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.21",
+    "@epimon/common": "workspace:^",
     "@types/chrome": "^0.0.254",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
