feat(wt): complete confirm secret page

--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "bip39": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "elliptic": "^6.5.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,12 +26,14 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-node-polyfills": "^0.18.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.21",
     "@epimon/common": "workspace:^",
     "@types/chrome": "^0.0.254",
+    "@types/elliptic": "^6.4.18",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
