--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -17,6 +17,7 @@
     "bip39": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "crypto-js": "^4.2.0",
     "elliptic": "^6.5.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
     "@crxjs/vite-plugin": "2.0.0-beta.21",
     "@epimon/common": "workspace:^",
     "@types/chrome": "^0.0.254",
+    "@types/crypto-js": "^4.2.1",
     "@types/elliptic": "^6.4.18",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
